# Tensorflow-GPU-Dockerfile

./: .gitignore  Dockerfile  README.md  docker-compose.yml  start.sh
Notebooks/: TestNotebook.ipynb
poetry/: pyproject.toml
