[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Steven Fields"]

[tool.poetry.dependencies]
python = "3.8.10"
tensorflow-gpu = "2.7.0"
jupyterlab = "^3.2.5"
tensorboard = "2.7.0"
keras = "2.7.0"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
numpy = "^1.22.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
